--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2",
+    "underscore": "^1.13.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,6 +47,7 @@
     "@babel/core": "^7.18.13",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/underscore": "^1.11.4",
     "babel-jest": "^29.0.1",
     "jest": "^29.0.1"
   }
